// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on node >=24 invalid JS in jest.config.ts (node with native TS support) 1`] = `
"Error: Jest: Failed to parse the TypeScript config file <<REPLACED>>
  SyntaxError [ERR_INVALID_TYPESCRIPT_SYNTAX]: Expected ';', got 'string literal (ll break this file yo, 'll break this file yo)'"
`;

exports[`on node ^23.6 invalid JS in jest.config.ts (node with native TS support) 1`] = `
"Error: Jest: Failed to parse the TypeScript config file <<REPLACED>>
  SyntaxError [ERR_INVALID_TYPESCRIPT_SYNTAX]:   x Expected ';', got 'string literal (ll break this file yo, 'll break this file yo)'
   ,----
 1 | export default i'll break this file yo
   :                 ^^^^^^^^^^^^^^^^^^^^^^
   \`----
  x Unterminated string constant
   ,----
 1 | export default i'll break this file yo
   :                 ^^^^^^^^^^^^^^^^^^^^^^
   \`----"
`;

exports[`traverses directory tree up until it finds jest.config 1`] = `
"  console.log
<<REPLACED>>/jest-config-ts/some/nested/directory

      at Object.<anonymous> (__tests__/a-giraffe.js:3:27)
"
`;

exports[`traverses directory tree up until it finds jest.config 2`] = `
"PASS ../../../__tests__/a-giraffe.js
  ✓ giraffe
  ✓ abc"
`;

exports[`traverses directory tree up until it finds jest.config 3`] = `
"Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`works with jest.config.ts 1`] = `
"PASS __tests__/a-giraffe.js
  ✓ giraffe"
`;

exports[`works with jest.config.ts 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`works with jest.config.ts with cjs contents 1`] = `
"PASS __tests__/a-giraffe.js
  ✓ giraffe"
`;

exports[`works with jest.config.ts with cjs contents 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`works with tsconfig.json 1`] = `
"PASS __tests__/a-giraffe.js
  ✓ giraffe"
`;

exports[`works with tsconfig.json 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;
